- update Authentication - integrate PostgreSQL through EF core

--- a/Hera.WebAPI/appsettings.json
+++ b/Hera.WebAPI/appsettings.json
@@ -1,13 +1,13 @@
 {
-  "AppSettings": {
-    "Secret": "kjaslkdjl@@@912039kkasldkjalskjdl&&&&&&"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "PostgresSqlConnection": "User ID=postgres;Password=[TYPE_YOUR_PASSWORD];Server=localhost;Port=5432;Database=HeraIetls;Integrated Security=true;Pooling=true;"
   },
   "AllowedHosts": "*",
   "Encryption": {
