Add sign-in google api

--- a/Hera.WebAPI/Hera.WebAPI.csproj
+++ b/Hera.WebAPI/Hera.WebAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.45.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,6 +27,10 @@
     <ProjectReference Include="..\Hera.Common\Hera.Common.csproj" />
     <ProjectReference Include="..\Hera.Data\Hera.Data.csproj" />
     <ProjectReference Include="..\Hera.Services\Hera.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Logs\" />
   </ItemGroup>
 
 
