--- a/Hera.Common/Hera.Common.csproj
+++ b/Hera.Common/Hera.Common.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.45.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
@@ -18,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Core\Internal\" />
+    <Folder Include="Helper\" />
   </ItemGroup>
 
 </Project>
