update social login api

--- a/Hera.WebAPI/Properties/launchSettings.json
+++ b/Hera.WebAPI/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "Hera.WebAPI": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
