--- a/Hera.WebAPI/appsettings.json
+++ b/Hera.WebAPI/appsettings.json
@@ -20,5 +20,9 @@
     "RefreshTokenExpiredTimeInMinute": 65,
     "Issuer": "HeraIelts",
     "Audience": "http://localhost:5000"
+  },
+  "Authentication:Google": {
+    "ClientId": "",
+    "ClientSecret": ""
   }
 }
