--- a/Hera.Services/Hera.Services.csproj
+++ b/Hera.Services/Hera.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Hera.Common\Hera.Common.csproj" />
     <ProjectReference Include="..\Hera.Data\Hera.Data.csproj" />
   </ItemGroup>
