--- a/Hera.WebAPI/Dockerfile
+++ b/Hera.WebAPI/Dockerfile
@@ -1,23 +1,19 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-nanoserver-1903 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 5000
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-nanoserver-1903 AS build
+ENV ASPNETCORE_URLS=http://+:5000
+
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["Hera.WebAPI/Hera.WebAPI.csproj", "Hera.WebAPI/"]
-RUN dotnet restore "Hera.WebAPI/Hera.WebAPI.csproj"
+RUN dotnet restore "Hera.WebAPI\Hera.WebAPI.csproj"
 COPY . .
 WORKDIR "/src/Hera.WebAPI"
 RUN dotnet build "Hera.WebAPI.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Hera.WebAPI.csproj" -c Release -o /app/publish
+RUN dotnet publish "Hera.WebAPI.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
