--- a/Hera.WebAPI/Hera.WebAPI.csproj
+++ b/Hera.WebAPI/Hera.WebAPI.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>df82c9e7-ca18-4a6b-8c2e-39e1f398c8ae</UserSecretsId>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
