--- a/Hera.WebAPI/appsettings.json
+++ b/Hera.WebAPI/appsettings.json
@@ -18,7 +18,7 @@
     "OAuthSignatureKey": "Y0uM|_|$tN0t@cc3$$T0Th1$K3y2020!",
     "AccessTokenExpiredTimeInMinute": 60,
     "RefreshTokenExpiredTimeInMinute": 65,
-    "Issuer": "HeraIelts",
+    "Issuer": "Hera",
     "Audience": "http://localhost:5000"
   },
   "Authentication:Google": {
