add docker compose

--- a/Hera.WebAPI/appsettings.json
+++ b/Hera.WebAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostgresSqlConnection": "User ID=postgres;Password=123456;Server=localhost;Port=5432;Database=HeraIetls;Integrated Security=true;Pooling=true;"
+    "PostgresSqlConnection": "User ID=postgres;Password=123456;Server=localhost;Port=5432;Database=Hera;Integrated Security=true;Pooling=true;"
   },
   "AllowedHosts": "*",
   "Encryption": {
